--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This repository demonstrates how to make a project pip installable, write a Python module in C++ and use scikit-learn and keras for goodness of fit problems in an arbitrary number of dimensions.
+THIS PROJECT SHOULD BE RENAMED ML_GoF and investigates how to use ML in Goodness-of-fit problems in particle physics.
 
 In order to run some of the code, one has to define the bash variable learningml. In my case it is
 
